Producto para entrega final se agrega favicon - aplicacion de bootstrap

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlayerGamer</title>
+    <link rel="icon" href="./img/mando.jpg" type="image/png" />
     <link rel="stylesheet" href="./CSS/style.css" />
-    <!-- <link rel="stylesheet" href="normalize.css" /> -->
   </head>
 
   <body>
@@ -40,7 +40,9 @@
             <a href="pages/loguin.html" class="nav__link nav__link--boton"
               >Iniciar Sesión</a
             >
-            <a href="#" class="nav__link nav__link--boton">Registro</a>
+            <a href="pages/registro.html" class="nav__link nav__link--boton"
+              >Registro</a
+            >
           </div>
         </div>
       </nav>
@@ -83,10 +85,10 @@
               </figure>
               <h3 class="about__subtitulo">Por que vender</h3>
               <p class="about__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-                libero minus soluta quaerat veritatis tempore nostrum delectus.
-                Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-                recusandae reprehenderit perspiciatis illo?
+                En nuestra vida cotidiana realizamos continuamente transacciones
+                en la que vendemos o nos venden productos y/o servicios. Sin
+                embargo no todos entendemos la venta de la misma forma ni con
+                los mismos matices.
               </p>
               <a href="#" class="about__cta">Vende</a>
             </div>
@@ -97,10 +99,10 @@
               </figure>
               <h3 class="about__subtitulo">Por que comprar</h3>
               <p class="about__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio at
-                libero minus soluta quaerat veritatis tempore nostrum delectus.
-                Voluptate illo excepturi ratione ex dolore. Doloremque quasi
-                recusandae reprehenderit perspiciatis illo?
+                Estamos ante una gran oportunidad y es la de mostrar que podemos
+                sustituir muchas de nuestras compras diarias por productos
+                locales, no por ayudar a la industria, no por generar empleo, no
+                por ser ‘patriotas’ por comprar lo que nos gusta.
               </p>
               <a href="#" class="about__cta">Compra</a>
             </div>
@@ -148,21 +150,21 @@
                   </h3>
                 </div>
                 <p class="portafolio__paragrafo">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
-                  adipisci veniam, consectetur consequuntur atque ad recusandae
-                  reiciendis id. Odio repellat quae rerum aliquam totam
-                  voluptatibus sunt qui maiores architecto sit inventore placeat
-                  provident expedita perspiciatis odit, consectetur alias at,
-                  soluta, delectus nam libero explicabo commodi temporibus
-                  iste?<br /><br />
-                  Laboriosam, facere nemo! Lorem ipsum dolor sit amet
-                  consectetur adipisicing elit. Aut adipisci veniam, consectetur
-                  consequuntur atque ad recusandae reiciendis id. Odio repellat
-                  quae rerum aliquam totam voluptatibus sunt qui maiores
-                  architecto sit inventore placeat provident expedita
-                  perspiciatis odit, consectetur alias at, soluta, delectus nam
-                  libero explicabo commodi temporibus iste? Laboriosam, facere
-                  nemo!
+                  Conformamos un equipo de profesionales multidisciplinarios que
+                  comparten una misma mirada respecto al valor que tienen las
+                  personas. <br /><br />
+                  Estamos convencidos que un servicio personalizado, basado en
+                  la profundidad del vínculo, la calidez y la apertura, promueve
+                  que las personas amplíen sus posibilidades de aprendizaje,
+                  transformación y acción, a partir de descubrir su propio
+                  potencial.<br /><br />
+                  Nos comprometemos a brindarnos con respeto, transparencia y
+                  profesionalismo, acompañando y dando soporte en los procesos
+                  de transformación y en el logro de los objetivos.<br /><br />
+                  Trabajamos creando ambientes de apertura y apoyo, partiendo de
+                  la base de la aceptación y el respeto, de la diversidad de
+                  pensamientos y buscando con el otro nuevos caminos que
+                  conduzcan al crecimiento.
                 </p>
               </div>
               <div class="portafolio__member member1">
@@ -244,9 +246,9 @@
                 </div>
               </div>
               <p class="opinion__paragrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-                quasi atque incidunt suscipit perspiciatis ab sit adipisci
-                asperiores. Minus, aut.
+                Los videojuegos mejoran las habilidades cognitivas de los
+                menores; desarrollan su inventiva, creatividad y la capacidad
+                intelectual y de análisis
               </p>
             </div>
             <div class="opinion__mensaje">
@@ -263,9 +265,10 @@
                 </div>
               </div>
               <p class="opinion__paragrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-                quasi atque incidunt suscipit perspiciatis ab sit adipisci
-                asperiores. Minus, aut.
+                El uso frecuente de los mismos enriquece la capacidad de lógica,
+                de deducción y el razonamiento , aumenta su orientación espacial
+                y, además, se observan mejores resultados en matemáticas de los
+                adolescentes que los utilizan.
               </p>
             </div>
             <div class="opinion__mensaje">
@@ -282,9 +285,9 @@
                 </div>
               </div>
               <p class="opinion__paragrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-                quasi atque incidunt suscipit perspiciatis ab sit adipisci
-                asperiores. Minus, aut.
+                Se puede aprovechar su parte educativa y su parte lúdica para
+                estimular a los niños, por lo que son herramientas óptimas por
+                su inmersión en cualquier tipo de actividad.
               </p>
             </div>
             <div class="opinion__mensaje">
@@ -301,9 +304,10 @@
                 </div>
               </div>
               <p class="opinion__paragrafo">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-                quasi atque incidunt suscipit perspiciatis ab sit adipisci
-                asperiores. Minus, aut.
+                Potencian la agilidad mental , la toma de decisiones y la
+                capacidad para resolver conflictos . Además, permiten comparar
+                diferentes estrategias y consecuencias de las decisiones
+                tomadas.
               </p>
             </div>
           </div>
@@ -321,12 +325,14 @@
               <div class="noticias__textos">
                 <h3 class="noticias__subtitulo">FORTNITE SE VA DE CHINA.</h3>
                 <p class="noticias__paragraf">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nesciunt iste perferendis cupiditate beatae nihil nisi
-                  repellendus doloremque repellendus doloremque repellendus
-                  doloremque ciunt iste perferendis cupiditate beatae nihil nisi
-                  repellendus doloremque repellendus doloremque repellendus
-                  doloremque
+                  Desde agosto de 2021, Pekín estableció un estricto régimen que
+                  controla la cantidad de horas que un adolescente menor de 18
+                  años puede pasar jugando videojuegos. Si se pasan las 3 horas
+                  de juego semanales puede recibir una sanción. Esta medida se
+                  ha establecido con la excusa de combatir la adicción a
+                  videojuegos en jóvenes, sin embargo, muchos aluden que es un
+                  paso más en las políticas de censura y estricto control del
+                  régimen de Xi Jingping.
                 </p>
               </div>
             </div>
@@ -337,9 +343,11 @@
                   Warzone en Mobile, podria llegar en diciembre 2022.
                 </h3>
                 <p class="noticias__paragraf">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Exercitationem labore tenetur rem corrupti voluptate suscipit
-                  voluptates optio vel modi voluptatem! repellendus doloremque
+                  Call of Duty Warzone: Mobile se ha desarrollado con el mismo
+                  motor que CoD: Modern Warfare 2 y CoD: Warzone 2.0 adaptándolo
+                  a dispositivos móviles y permitiendo que los jugadores puedan
+                  acceder a diferentes funciones sociales del juego sin importar
+                  su plataforma e incluso.
                 </p>
               </div>
             </div>
@@ -350,9 +358,11 @@
                   Disminuyen las ventas de Grand Theft Auto V.
                 </h3>
                 <p class="noticias__paragraf">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Exercitationem labore tenetur rem corrupti voluptate suscipit
-                  voluptates optio vel modi voluptatem! repellendus doloremque
+                  Las ventas de Grand Theft Auto 5 disminuyen por primera vez en
+                  más de 9 años Take-Two Interactive reporta que el juego de
+                  Rockstar Games vendió un millón de copias entre julio y
+                  septiembre de 2022. Se trata del peor trimestre que ha
+                  registrado GTA V en toda su historia.
                 </p>
               </div>
             </div>
@@ -363,9 +373,11 @@
                   The Witcher 3 llega a 'next-gen'.
                 </h3>
                 <p class="noticias__paragraf">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Exercitationem labore tenetur rem corrupti voluptate suscipit
-                  voluptates optio vel modi voluptatem! repellendus doloremque
+                  The Witcher 3 para la 'next-gen' llega el 14 de diciembre a
+                  PC, PS5 y Xbox Series La nueva versión añadirá trazado de
+                  rayos, 'mods' integrados y contenidos inspirados en la serie
+                  de Netflix que también estarán disponibles en las versiones de
+                  PS4, Xbox One y Switch.
                 </p>
               </div>
             </div>
