--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/style.css" />
     <title>Servicios</title>
+    <link rel="icon" href="../img/mando.jpg" type="image/png" />
+    <link rel="stylesheet" href="../CSS/style.css" />
   </head>
 
   <body>
@@ -49,7 +50,9 @@
               class="nav__link nav__link--boton servi__style--btn"
               >Iniciar Sesión</a
             >
-            <a href="#" class="nav__link nav__link--boton servi__style--btn"
+            <a
+              href="registro.html"
+              class="nav__link nav__link--boton servi__style--btn"
               >Registro</a
             >
           </div>
@@ -102,12 +105,12 @@
               <div class="services__encabezado">
                 <h3 class="services__subtitle">Nuevo:</h3>
                 <p class="services__paragrafo services--manejo">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
-                  eligendi Lorem ipsum dolor sit amet consectetur adipisicing
-                  elit.
+                  Disfruta de los mejores de servicio de nuestra seleccion los
+                  mejores tecnicos a tu dispocision o elije entre nuestro
+                  equipo.
                 </p>
               </div>
-              <div class="services__pie">
+              <div class="services__pie service__pie--pading1">
                 <h3 class="services__price">USD $ 100</h3>
                 <p class="services__minparagrafo">precio</p>
                 <a href="#" class="btn-buy">comprar</a>
@@ -126,12 +129,12 @@
               <div class="services__encabezado">
                 <h3 class="services__subtitle">conservación:</h3>
                 <p class="services__paragrafo">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
-                  eligendi Lorem ipsum dolor sit amet consectetur adipisicing
-                  elit.
+                  El mejor de servicio de nuestra seleccion los mejores tecnicos
+                  para tu consola elije entre nuestro equipo conserva tu
+                  consola.
                 </p>
               </div>
-              <div class="services__pie">
+              <div class="services__pie service__pie--pading2">
                 <h3 class="services__price">USD $ 110</h3>
                 <p class="services__minparagrafo">precio</p>
                 <a href="#" class="btn-buy">comprar</a>
@@ -150,9 +153,9 @@
               <div class="services__encabezado">
                 <h3 class="services__subtitle">Diseño:</h3>
                 <p class="services__paragrafo">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
-                  eligendi Lorem ipsum dolor sit amet consectetur adipisicing
-                  elit.
+                  Apuestale al diseño, haz que se vea de una forma sorprendente
+                  y disfruta de los juegos y de la agradable vista de tus
+                  herramientas.
                 </p>
               </div>
               <div class="services__pie">
@@ -174,9 +177,9 @@
               <div class="services__encabezado">
                 <h3 class="services__subtitle">Led:</h3>
                 <p class="services__paragrafo">
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel,
-                  eligendi Lorem ipsum dolor sit amet consectetur adipisicing
-                  elit.
+                  Una atractiva vista de colores que se reflejen de tu consola
+                  es la solucion a que sumerjas mas en tus juegos, y un aspecto
+                  mas gamer.
                 </p>
               </div>
               <div class="services__pie">
@@ -202,7 +205,7 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">battlefield 5 aún en auge</h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -216,7 +219,9 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">
+                      Spider-Man un nuevo capítulo
+                    </h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -230,7 +235,7 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">Baloncesto como videojuego</h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -244,7 +249,9 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">
+                      Red Dead Redemption arrasa en ventas
+                    </h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -258,7 +265,9 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">
+                      Assassin's Creed la secuela más larga
+                    </h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -272,7 +281,7 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">Halo y su gran historia</h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -286,7 +295,7 @@
                       />
                       <span class="servinoti__span">05.12.2022</span>
                     </figure>
-                    <h3 class="servinoti__title">Lorem ipsum dolor sit amet</h3>
+                    <h3 class="servinoti__title">crysis su regreso</h3>
                     <a href="#" class="servinoti__btn">Cultura</a>
                   </article>
                 </li>
@@ -318,8 +327,8 @@
                 Tenemos un descuento especial para los primeros 50 clientes
               </h3>
               <p class="nuestros__paragrafo">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem
-                quo, dolorum perferendis aut unde repudiandae!
+                Para los primeros 50 clientes del dia tenemos descuentos de un
+                20% en todo articulo de la tienda!
               </p>
             </div>
           </div>
@@ -334,8 +343,8 @@
                 devolvemos su dinero.
               </h3>
               <p class="nuestros__paragrafo">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem
-                quo, dolorum perferendis aut unde repudiandae!
+                Si tu producto tiene defectos o presenta problemas no dudes en
+                escribirnos te devolvemos el dinero!
               </p>
             </div>
           </div>
