--- a/pages/producto.html
+++ b/pages/producto.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Producto</title>
+    <link rel="icon" href="../img/mando.jpg" type="image/png" />
     <link rel="stylesheet" href="../CSS/style.css" />
-    <!-- <link rel="stylesheet" href="../normalize.css" /> -->
   </head>
 
   <body>
@@ -50,7 +50,9 @@
               class="nav__link nav__link--boton nav__style--btn"
               >Iniciar Sesión</a
             >
-            <a href="#" class="nav__link nav__link--boton nav__style--btn"
+            <a
+              href="registro.html"
+              class="nav__link nav__link--boton nav__style--btn"
               >Registro</a
             >
           </div>
